# MyFinance

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  requirements.txt  witch to the develop branch
GlobalTicker/: .gitignore  pyproject.toml  readme.md  requirements.txt
GlobalTicker/globalticker/: __init__.py  download.py  exceptions.py  ticker.py  utils.py
GlobalTicker/globalticker/wrapper/: __init__.py  base.py  thai_nav_wrapper.py  yahoo_wrapper.py
api/: main.py  parser.ipynb  requirements.txt
api/history/: SCBWORLDA_history.csv
dashboard/: app.py
